--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "test_vue",
   "version": "0.1.0",
   "private": true,
+  "author": "Asuka",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "colorthief": "^2.4.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "element-ui": "^2.15.14",
+    "vue": "^2.6.14",
+    "vue-router": "3.0.2",
+    "vuex": "3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
